Adding Admin Authorization and JWT validation
