# api/middleware.go
@@ -1,0 +1,76 @@
+package api
+
+import (
+	"errors"
+	"fmt"
+	"net/http"
+	"strings"
+
+	"github.com/gin-gonic/gin"
+	"github.com/golang-jwt/jwt"
+	"github.com/naderSameh/ticketing_support/token"
+)
+
+const (
+	authorizationHeaderKey  = "authorization"
+	authorizationTypeBearer = "bearer"
+	authorizationPayloadKey = "authorization_payload"
+	secretKey               = "wbguxmeWWlsLwv75423AdsggbBp3853hdsgceDS95dbyFA"
+)
+
+// AuthMiddleware creates a gin middleware for authorization
+func authMiddleware() gin.HandlerFunc {
+	return func(ctx *gin.Context) {
+		authorizationHeader := ctx.GetHeader(authorizationHeaderKey)
+
+		if len(authorizationHeader) == 0 {
+			err := errors.New("authorization header is not provided")
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, errorResponse(err))
+			return
+		}
+
+		fields := strings.Fields(authorizationHeader)
+		if len(fields) < 2 {
+			err := errors.New("invalid authorization header format")
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, errorResponse(err))
+			return
+		}
+
+		authorizationType := strings.ToLower(fields[0])
+		if authorizationType != authorizationTypeBearer {
+			err := fmt.Errorf("unsupported authorization type %s", authorizationType)
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, errorResponse(err))
+			return
+		}
+
+		accessToken := fields[1]
+
+		keyFunc := func(token *jwt.Token) (interface{}, error) {
+			_, ok := token.Method.(*jwt.SigningMethodHMAC)
+			if !ok {
+				return nil, errors.New("token is invalid")
+			}
+			return []byte(secretKey), nil
+		}
+
+		jwtToken, err := jwt.ParseWithClaims(accessToken, &token.Payload{}, keyFunc)
+		if err != nil {
+			verr, ok := err.(*jwt.ValidationError)
+			if ok && errors.Is(verr.Inner, errors.New("token has expired")) {
+				ctx.AbortWithStatusJSON(http.StatusUnauthorized, errorResponse(err))
+				return
+			}
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, errorResponse(err))
+			return
+		}
+
+		payload, ok := jwtToken.Claims.(*token.Payload)
+		if !ok {
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, errorResponse(err))
+			return
+		}
+
+		ctx.Set(authorizationPayloadKey, payload)
+		ctx.Next()
+	}
+}
